# LinuxApplicationDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb-script1  gdb-script2  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
07_Environmental/tests/: test_file.sh  test_md5.sh  test_sha1.sh
08_I18n/: CMakeLists.txt  README.md  guess.c
08_I18n/locale/ru_RU.UTF-8/LC_MESSAGES/: messages.po
09_PatchDiff/: Makefile  maze.c  patch1.diff  patch2.diff  patch3.diff
10_Testing/: CMakeLists.txt  README.md  buf.h
10_Testing/tests/: CMakeLists.txt  GrowTest.c  InitTest.c  NullTest.c  PopTest.c  PushTest.c  test.h
11_Documenting/: CMakeLists.txt  README.md
11_Documenting/docs/: Doxyfile.in  README.md
11_Documenting/locale/ru_RU.UTF-8/LC_MESSAGES/: messages.po
11_Documenting/src/: guess.c
